# reach

./: .clang-tidy  .dockerignore  .pre-commit-config.yaml  README.md  ros2.repos
.devcontainer/: Dockerfile
.devcontainer/nouveau/: Dockerfile  devcontainer.json
.devcontainer/nvidia/: Dockerfile  devcontainer.json
.docker/: Dockerfile
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: ci.yml  docker.yml
example_pkg/: package.xml
libreach/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
libreach/examples/: README.md  alpha5_example.cpp  bravo7_example.cpp  multiple_workers.cpp  request_packets.cpp  send_packets.cpp
libreach/include/libreach/: client.hpp  device_id.hpp  driver.hpp  mode.hpp  packet.hpp  packet_id.hpp  serial_client.hpp  serial_driver.hpp  status_flags.hpp  udp_client.hpp  udp_driver.hpp  version.hpp
libreach/src/: client.cpp  cobs.cpp  cobs.hpp  crc.cpp  crc.hpp  driver.cpp  packet.cpp  serial_client.cpp  serial_driver.cpp  udp_client.cpp  udp_driver.cpp
reach_bringup/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
reach_bringup/launch/: alpha_5.launch.yaml  alpha_5_minimal.launch.yaml  base.launch.py  control.launch.py  gz.launch.yaml  micro_ip.launch.py  minimal.launch.py
reach_bringup/launch/alpha_5/: alpha_5.launch.yaml  control.launch.py
reach_bringup/launch/bravo_7/: bravo_7.launch.yaml
reach_controllers/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  reach_controllers.xml
reach_controllers/include/reach_controllers/: impedance_controller.hpp
reach_controllers/src/: impedance_controller.cpp  impedance_controller_parameters.yaml
reach_description/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
reach_description/config/alpha_5/: controllers.yaml  initial_positions.yaml
reach_description/config/bravo_7/: controllers.yaml  initial_positions.yaml
reach_description/config/micro_ip/: camera_info.yaml  gstreamer_proxy.yaml
reach_description/description/alpha_5/: config.xacro  ros2_control.xacro  standard_jaws.config.xacro  urdf.xacro
reach_description/description/alpha_5/end_effectors/: standard_jaws.urdf.xacro
reach_description/description/alpha_5/standard_jaws/: alpha_5.config.xacro
reach_description/description/bravo_7/: bravo_7.yaml  config.xacro  gazebo.xacro  ros2_control.xacro  urdf.xacro  urdf.xacro.in
reach_description/description/bravo_7/end_effectors/: standard_jaws.urdf.xacro  standard_jaws.urdf.xacro.in  standard_jaws.yaml
reach_description/gazebo/models/moon/: model.sdf
reach_description/gazebo/worlds/: moon.world
reach_description/meshes/alpha_5/: M1.dae  M2-1-1.dae  M2-1-3.dae  M2-1.dae  M2.dae  M3-INLINE.dae  RS1-1010.dae  RS1-124.dae
reach_description/meshes/alpha_5/end_effectors/: RS1-130.dae  RS1-139.dae
reach_description/meshes/bravo_7/: 1013-A.stl  1013-B.stl  1019-A.stl  1019-B.stl  1030.stl  1038.stl  RS2-1023-B.stl  RS2-1026-A.stl  RS2-1026-C.stl
reach_description/meshes/bravo_7/end_effectors/: RS2-257.stl  RS2-300.stl  RS2-301.stl
reach_description/rviz/: view_alpha.rviz
reach_description/rviz/alpha_5/: view_alpha.rviz
reach_description/rviz/bravo_7/: view_bravo.rviz
reach_description/scripts/: generate_model.py
reach_hardware/: CHANGELOG.md  CMakeLists.txt  README.md  alpha_5_hardware.xml  bravo_7_hardware.xml  package.xml
reach_hardware/include/reach_hardware/: alpha_5_hardware.hpp  bravo_7_hardware.hpp
reach_hardware/src/: alpha_5_hardware.cpp  bravo_7_hardware.cpp
reach_ip_camera/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
reach_ip_camera/include/reach_ip_camera/: gstreamer_proxy.hpp
reach_ip_camera/src/: gstreamer_proxy.cpp  gstreamer_proxy_parameters.yaml
reach_msgs/: CHANGELOG.md  CMakeLists.txt  LICENSE  package.xml
reach_msgs/msg/: MultiDOFImpedanceCommand.msg  MultiDOFImpedanceStateStamped.msg
scripts/: alpha_5_parameters.yaml  transform_parameters.py
